# mcp-media-ingestor

./: .gitignore  .mcp.json  CODE_INDEX.md  EAR.py  README.md  RILEY.py  RILEYBRIDGE.py  SPEAK.py  TONE.py  _paths.py  brockston_bridge_client.py  carbon_bridge_client.py  christman_studio.py  continuous_mic.py  dashboard.html  family_bridge.py  hermes_bridge_client.py  main.py  mic_capture.py  music_engine.py  nexus_bridge_client.py  onnxrt_backend_legacy.py  pyproject.toml  realtime_audio.py  server.py  swirlmem.py  test_audio.py  test_websocket.py  test_whisper.py  vega_queue_status.json  vision_capture.py  voice_loop.py  yorkie.html
.claude-plugin/: plugin.json
alpha_zero_latency/: __init__.py
alpha_zero_latency/family/: __init__.py  alphavox.py  registry.py
alpha_zero_latency/pedagogy/: __init__.py  journal.py  sovereign_disconnect.py
skills/media-ingestion/: SKILL.md
vega/: CORE.py  IDENTITY.md  MEMORY.py  SAFETY.py  SOUL.py  STRATEGY.py  VOICE.py  __init__.py  catchup_now.py  daily_engine.py  theater.py  vega_daily_launch.plist
vega/analytics/: __init__.py  tracker.py  visualizer.py
vega/brollbaby/: __init__.py  caption_style.py  keyword_brain.py  pillow_overlay.py  title_card.py
vega/data/: analytics.json  posts.json  schedule.json
vega/image/: __init__.py  generator.py
vega/scheduler/: __init__.py  platforms.py  scheduler.py
vega/tests/: __init__.py  test_core.py  test_memory.py  test_safety.py  test_soul.py
vega/video/: __init__.py  assembler.py  broll.py  generator.py  queue.py
vega/voice/: __init__.py  narrator.py
